[build-system]
requires = ["setuptools>=65.5"]
build-backend = "setuptools.build_meta"

[project]
name = "pySuStaIn"
version = "0.2.0-rc.1"
description = "Python implementation of the SuStaIn algorithm"
#readme = "README.md"  # optional, if you have it
requires-python = ">=3.14"
license = { text = "TBC" }
authors = [
  { name = "Leon Aksman", email = "l.aksman@ucl.ac.uk" }
]
maintainers = [
  { name = "Leon Aksman", email = "l.aksman@ucl.ac.uk" },
  { name = "Neil Oxtoby", email = "n.oxtoby@ucl.ac.uk" }
]
dependencies = [
  "numpy>=2.4.2",
  "scipy",
  "matplotlib>=3.10.8",
  "scikit-learn",
  "pandas>=3.0.0",
  "pybind11",
  "tqdm"
]

classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Topic :: Scientific/Engineering"
]

[project.optional-dependencies]
kdeebm = [
  "kde_ebm @ git+https://github.com/ucl-pond/kde_ebm.git", # uses 
  #"awkde @ git+https://github.com/mennthor/awkde.git" # NOTE: kde_ebm uses noxtoby fork of awkde (FIXME), not the original mennthor version
]

[project.urls]
Homepage = "https://github.com/ucl-pond/pySuStaIn"

[tool.setuptools]
packages = ["pySuStaIn", "sim"]

# [tool.setuptools.packages.find]
# where = ["."]
